# actix-todo-sqlx

./: Cargo.toml  docker-compose.yml
migrations/: 20220809001107_initial_migration.sql  create_database.sql
src/: main.rs  model.rs  server.rs
src/model/: serde.rs
