[package]
name = "actix-todo-sqlx"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15"

actix-web = { version = "4" }
sqlx = { version = "0.6.0", features = ['runtime-tokio-rustls', 'postgres', 'offline'] }

serde = { version = "1", features = ['derive'] }
serde_json = "1"

thiserror = "1"

tokio = { version = "1", features = ['macros']}

serde-transcode = "1"

env_logger = "0.9"
log = "0.4"

[profile.test]
debug = true
